# geopolitical-claim-verification

./: .gitignore  LICENSE  README.md  geopolitical_claim_verification.py  pyproject.toml
data/: PRIME_INTELLECT_3.1_BUG_REPORT_DRAFT.md  SCHEMA.md  claims.json  curation_template.json  multi_model_summary.md  placeholder_claims.json
data/_skeletons/oil-tanker/: oil-tanker-001.json  oil-tanker-007.json  oil-tanker-012.json  oil-tanker-015.json
data/_skeletons/ru-ua/: ru-ua-004.json  ru-ua-020.json  ru-ua-024.json
data/claims_to_curate/: README.md
data/claims_to_curate/iran-israel/: iran-israel-001.json  iran-israel-002.json  iran-israel-003.json  iran-israel-004.json  iran-israel-005.json  iran-israel-006.json  iran-israel-007.json  iran-israel-008.json  iran-israel-009.json  iran-israel-010.json  iran-israel-011.json  iran-israel-012.json  iran-israel-013.json  iran-israel-014.json  iran-israel-015.json  iran-israel-016.json  iran-israel-017.json  iran-israel-018.json  iran-israel-019.json  iran-israel-020.json  iran-israel-021.json  iran-israel-022.json
data/claims_to_curate/oil-tanker/: oil-tanker-010.json
data/multi_model_results/: PrimeIntellect_INTELLECT-3.1.json  _index.json  anthropic_claude-opus-4.7.json  anthropic_claude-sonnet-4.6.json  deepseek_deepseek-r1-0528.json  google_gemini-2.5-pro.json  openai_gpt-5.2.json  prime-intellect_intellect-3.json  qwen_qwen3-30b-a3b-instruct-2507.json
scripts/: aggregate_results.py  cost_estimator.py  merge_curated.py  multi_model_eval.py  validate_dataset.py
scripts/hooks/: pre-push
tests/: test_smoke.py
(+1 files in other folders)
