[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "geopolitical-claim-verification"
version = "0.1.0"
description = "Single-turn verifiers env: classify factual geopolitical claims (TRUE/FALSE/PARTIALLY_TRUE/UNVERIFIED) by reasoning over mixed-reliability sources, with 22 claims anchored on the Operation Epic Fury period (US–Iran, Feb–Apr 2026)."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{name = "bitdrongo"}]
keywords = ["geopolitics", "reasoning", "claim-verification", "single-turn", "verifiable", "polymarket", "iran", "operation-epic-fury"]
dependencies = [
    "verifiers>=0.1.12",
    "datasets>=3.0.0",
    "openai>=1.50.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.verifiers]
tags = ["geopolitics", "reasoning", "claim-verification", "single-turn", "verifiable", "polymarket", "iran", "operation-epic-fury"]

[tool.verifiers.eval]
num_examples = 22
rollouts_per_example = 1

[tool.hatch.build.targets.wheel]
include = ["geopolitical_claim_verification.py"]

[tool.hatch.build.targets.wheel.force-include]
"data/placeholder_claims.json" = "data/placeholder_claims.json"
"data/claims.json" = "data/claims.json"
